--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@
 </head>
 <body>
     
-    <div id="res" style="color: green; font-size: 80px;">
+    <div id="res" style="color: green; font-size: 80px; border: 5px ridge rgb(190, 0, 0); display:flex; justify-content: center;">
 
     </div>
 
+    <div id="imagen" style="display: flex; justify-content: center;">
+
+    </div>
 
     <script src="index.js"></script>
 </body>
