Se implementó fetch y se cerró la historia

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div id="res" style="color: green; font-size: 80px; border: 5px ridge rgb(190, 0, 0); display:flex; justify-content: center;">
 
     </div>
-    <div id="contenedor_capitulo1" class="container ">
+    <div class="container">
         <img id="imagen" src="" alt="" width="100%">
         <div class="pantalla1">
             <div class="parrafo row">
