--- a/index.html
+++ b/index.html
@@ -10,16 +10,17 @@
 </head>
 <body>
     
-    <div id="res" style="color: green; font-size: 80px; border: 5px ridge rgb(190, 0, 0); display:flex; justify-content: center;">
 
-    </div>
     <div class="container">
         <img id="imagen" src="" alt="" width="100%">
         <div class="pantalla1">
             <div class="parrafo row">
                 <p id="texto"></p>
             </div>
-            <div id="botones" class="divbtn">
+            <div id="input">
+
+            </div>
+            <div id="botones" class="container divbtn">
                 
             </div>
         </div>
